// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@artifak/grid Grid should render 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH fYwbiX"
    display="grid"
  >
    <div
      class="sc-htpNat KtFsv"
    >
      1
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      2
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      3
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      4
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      5
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render grid-auto-columns style if no columnSize prop is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH QxCAR"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-htpNat KtFsv"
    >
      1
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      2
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      3
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      4
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      5
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render gridGap style if a value is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH jefOZT"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-htpNat KtFsv"
    >
      1
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      2
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      3
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      4
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      5
    </div>
    <div
      class="sc-htpNat KtFsv"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;
